tests/NormalTests/paczka1/fuzzy1/54621309.err
Error in line 4: f7DMlkCOakJ S789 68,0
Error in line 1: 08hEZS8P S164 56,6
Error in line 7: cJK9uXutB S254 88,9
Error in line 10: cJK9uXutB S789 92,4
Error in line 23: KqkfX34m3 A273 21,5
Error in line 25: KqkfX34m3 S789 61,4
